--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <main>
     <div id="container">
       <div id="pattern">
-        <img src="./images/bg-pattern-desktop.svg" alt="">
+        <img alt="" src="./images/bg-pattern-desktop.svg" alt="">
       </div>
       <div id="logo">
-        <img src="./images/logo.svg" alt="">
+        <img alt="" src="./images/logo.svg" alt="">
       </div>
       <div id="content">
         <h1 id="title">We're <span>coming soon</span></h1>
@@ -27,8 +27,8 @@
         <span id="error"></span>
       </div>
       <div id="image">
-        <img class="image-desktop" src="./images/hero-desktop.jpg">
-        <img class="image-mobile" src="./images/hero-mobile.jpg">
+        <img class="image-desktop" alt="" src="./images/hero-desktop.jpg">
+        <img class="image-mobile" alt="" src="./images/hero-mobile.jpg">
       </div>
     </div>
   </main>  
